# ctp-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: rust.yml
examples/: md_api.rs  td_api.rs
lib/6.7.8/: error.xml
localctp/: CSqliteHandler.cpp  CSqliteHandler.h  LeeDateTime.cpp  LeeDateTime.h  LocalCTP.cpp  LocalTraderApi.cpp  LocalTraderApi.h  Properties.cpp  Properties.h  VERSION.md  Variant.hpp  ctpStatus.h  dllmain.cpp  stdafx.cpp  stdafx.h
localctp/auto_generated_code/: CTPApiHugeMacro.h  CTPSQLWrapper.cpp  CTPSQLWrapper.h
src/: lib.rs
wrapper/include/: CMdSpi.h  CTraderSpi.h  Converter.h  DarwinDylibLoader.h  DarwinSdkShim.h  MdApi.h  TraderApi.h
wrapper/scripts/: regen_darwin_shim.py
wrapper/src/: CMdSpi.cpp  CTraderSpi.cpp  Converter.cpp  DarwinDylibLoader.cpp  MdApi.cpp  MdApiDarwinShim.cpp  TraderApi.cpp  TraderApiDarwinShim.cpp
