[package]
authors = ["Ruiqi Lei <Rn7s2@outlook.com>"]
categories = ["api-bindings", "finance"]
description = "Safe & idiomatic Rust bindings for CTP; cross-platform (Windows/Linux/macOS) with built-in LocalCTP support"
edition = "2024"
keywords = ["ctp", "futures", "trading", "ctp2rs", "quant"]
license = "MIT"
name = "ctp-rs"
readme = "README.md"
repository = "https://github.com/rn7s2/ctp-rs.git"
version = "0.3.0+ctp.6.7.11.darwin.6.7.7"
# `lib/` is fetched at build time by build.rs (too large for crates.io's
# compressed package limit); never include it in the published tarball.
exclude = ["lib/**"]

[features]
localctp = []

[dependencies]
cxx = "1.0"

[build-dependencies]
cc = "1.0"
cxx-build = "1.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
